--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
         \n
         \nTo return, tap the return button or tap your phone \"back\" button.</string>
     <string name="send_button">Send</string>
+    <string name="activity_alert_dialog_showcase_explanatory_text">This activity shows an example of Alert DIalog when the user press the button \"Alert Dialog\".
+        \n
+        \nTo return, tap the return button or tap your phone \"back\" button.</string>
+    <string name="alert_dialog_button">Alert dialog</string>
 </resources>
